# wiretap-py

./: .gitignore  LICENSE  README.md  create wiretap_log.sql  requirements.txt
wiretap/: pyproject.toml  requirements.txt  setup.py
wiretap/src/_reusable/: __init__.py  elapsed.py  node.py  one_time_flag.py
wiretap/src/wiretap/: __init__.py  activity.py  context.py  counter.py  layers.py  loggers.py  loggers_classic.py  loggers_fluent.py  tag.py  telemetry.py  trace.py  wiretap.py
wiretap/src/wiretap/contexts/: __init__.py  activity.py  iteration.py  procedure.py
wiretap/src/wiretap/data/: __init__.py  data.py
wiretap/src/wiretap/filters/: __init__.py  add_activity_info.py  add_current_activity.py  add_default_activity.py  add_extra_activity.py  add_extra_const.py  add_extra_context.py  add_extra_indent.py  add_extra_node.py  add_extra_timestamp.py  add_extra_trace.py  dump_exception.py  fields.py  filters.py  format_args.py  format_result.py  serialize_details_to_json.py  serialize_to_json.py  strip_exc_info.py
wiretap/src/wiretap/formatters/: __init__.py  json_formatter.py  text_formatter.py
wiretap/src/wiretap/helpers/: __init__.py
wiretap/src/wiretap/json/: __init__.py  encoders.py  json_multi_encoder.py  properties.py
wiretap/src/wiretap/process/: __init__.py  activity.py  activity_scope.py
wiretap/src/wiretap/scopes/: __init__.py  activity.py  loop.py
wiretap/src/wiretap/session/: __init__.py
wiretap/tests/: test_counter.py  test_traces.py
wiretap_sqlite/: pyproject.toml
wiretap_sqlserver/: pyproject.toml  requirements.txt
wiretap_sqlserver/sql/: create wiretap_log.sql  insert into wiretap_log.sql
wiretap_sqlserver/src/wiretap_sqlserver/: __init__.py  sqlserverhandler.py
(+26 files in other folders)
