[build-system]
requires = ["setuptools>=65.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiretap"
version = "9.1.8"
requires-python = ">=3.10"
authors = [{ name = "he-dev" }]
description = "This package provides a context-oriented logger."
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities"
]
readme = { file = "README.md", content-type = "text/markdown" }


[project.urls]
"GitHub" = "https://github.com/he-dev/wiretap-py"



