[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiretap"
version = "2.0.0"
requires-python = ">=3.9.*"
authors = [{ name = "he-dev" }]
dependencies = [
    "pyodbc"
]


#[tool.poetry]
#packages = [
#    { include = "handlers", from = "src" }
#]




