[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiretap-sqlserver"
version = "3.0.0"
requires-python = ">=3.10"
authors = [{ name = "he-dev" }]
dependencies = [
    "pyodbc"
]

[project.urls]
"GitHub" = "https://github.com/he-dev/wiretap-py"




